@@ -1,5 +1,7 @@
 === master
 
+* Add minitest/parallel_fork/fail_fast with support for stopping execution as soon as there is a failure in any child process (jeremyevans, stackmystack) (#12)
+
 * Refactor internals for easier extension (jeremyevans)
 
 === 1.3.1 (2023-09-25)
